--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,10 @@
 <header>
   <nav class="navbar navbar-light bg-light navbar-expand-sm fixed-top">
     <div class="container">
-      <div class="collapse navbar-collapse" id="nav-collapse">
+      <div>
+        <h3>Employee Management System</h3>
+      </div>
+      <div>
         <ul class="navbar-nav mr-auto" ng-include="template.menu"></ul>
       </div>
     </div>
