--- a/views/content/add.html
+++ b/views/content/add.html
@@ -8,6 +8,7 @@
         <input
           type="text"
           name="id"
+          ng-change="template.employeeIdValidation(formData)"
           class="form-control"
           ng-model="formData.id"
           placeholder="Enter Your Employee Id"
