--- a/views/content/home.html
+++ b/views/content/home.html
@@ -9,6 +9,7 @@
     <thead>
       <tr>
         <th>Sr. No.</th>
+        <th>Department</th>
         <th>Employee Id</th>
         <th>First Name</th>
         <th>Last Name</th>
@@ -19,6 +20,7 @@
     <tbody>
       <tr ng-repeat="employee in template.employeeData|filter:searchData.text">
         <td>{{$index+1}}</td>
+        <td>{{employee.department}}</td>
         <td>{{employee.id}}</td>
         <td>{{employee.firstname}}</td>
         <td>{{employee.lastname}}</td>
