--- a/views/content/edit.html
+++ b/views/content/edit.html
@@ -15,6 +15,18 @@
           required
         />
       </div>
+      <div class="form-group">
+        <label>Department</label>
+        <input
+          type="text"
+          name="id"
+          class="form-control"
+          ng-model="formData.department"
+          readonly
+          placeholder="Enter Your Employee Id"
+          required
+        />
+      </div>
       <label>First Name*</label>
       <input
         type="text"
