--- a/views/content/home.html
+++ b/views/content/home.html
@@ -10,7 +10,9 @@
     </div>
     <div class="col-md-4"></div>
     <div class="col-md-4">
-      Total Salary of Company: {{totalSalary|currency : "₹"}}
+      <span style="float:right;"
+        >Total Salary of Company: {{totalSalary|currency : "₹"}}</span
+      >
     </div>
   </div>
 
